--- a/Projects/App/src/components/UnityCanvas.module.scss
+++ b/Projects/App/src/components/UnityCanvas.module.scss
@@ -1,16 +1,27 @@
-.title {
-    text-align: center;
-    margin-top: 30px;
-    margin-left: auto;
-    margin-right: auto;
+.fullscreen_container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /*
+    position: fixed;
+    margin-top: auto;
+    margin-bottom: auto;
+    // top: 0;
+    // left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    */
 }
 
 .canvas {
-    align-items: center;
-    align-content: center;
-    // margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
+    height: auto;
+    // width: auto;
+    // height: 100%;
+    aspect-ratio: 16 / 9;
 }
 
 .button_area {
